<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sv_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.agung.android.toasty.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <Button
            android:id="@+id/btn_just_toast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_button"
            android:text="@string/text_just_toast"
            android:textColor="@color/colorWhite"
            android:layout_margin="8dp"/>

        <Button
            android:id="@+id/btn_error_toast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_button"
            android:text="@string/text_error_toast"
            android:textColor="@color/colorWhite"
            android:layout_margin="8dp"/>

        <Button
            android:id="@+id/btn_success_toast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_button"
            android:text="@string/text_success_toast"
            android:textColor="@color/colorWhite"
            android:layout_margin="8dp"/>

        <Button
            android:id="@+id/btn_info_toast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_button"
            android:text="@string/text_info_toast"
            android:textColor="@color/colorWhite"
            android:layout_margin="8dp"/>

        <Button
            android:id="@+id/btn_info_toast_with_formating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_button"
            android:text="@string/text_info_toast_with_formating"
            android:textColor="@color/colorWhite"
            android:layout_margin="8dp"/>

        <Button
            android:id="@+id/btn_warning_toast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_button"
            android:text="@string/text_warning_toast"
            android:textColor="@color/colorWhite"
            android:layout_margin="8dp"/>

        <Button
            android:id="@+id/btn_normal_toast_without_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_button"
            android:text="@string/text_normal_toast_without_icon"
            android:textColor="@color/colorWhite"
            android:layout_margin="8dp"/>

        <Button
            android:id="@+id/btn_normal_toast_with_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_button"
            android:text="@string/text_normal_toast_with_icon"
            android:textColor="@color/colorWhite"
            android:layout_margin="8dp"/>

        <Button
            android:id="@+id/btn_custom_configuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_button"
            android:text="@string/text_custom_configuration"
            android:textColor="@color/colorWhite"
            android:layout_margin="8dp"/>
    </LinearLayout>

</ScrollView>
